Implémentation du CSP

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
   </head>
   <body>
-    <app-root></app-root>
+    <app-root ngCspNonce="NGINX_CSP_NONCE"></app-root>
   </body>
 </html>
